// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return a expenses summary for multiple expense 1`] = `
<div>
  <h3>
    You are viewing 
    3
     expenses totalling 
    ₹292.50
  </h3>
</div>
`;

exports[`Should return a expenses summary for single expense 1`] = `
<div>
  <h3>
    You are viewing 
    1
     expense totalling 
    ₹250.00
  </h3>
</div>
`;
